adding a new animal and displaying all animals

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -4,10 +4,10 @@
         <title>{{#block "title"}}Forest-Service{{/block}}</title>
         <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     </head>
-    <body style="color:white;">
-        <ul style="text-align:center;background-color:white;" class="nav nav-tabs">
-            <li role="presentation"><a style="color:black;"  href="/">Animals</a></li>
-            <li role="presentation"><a style="color:black;"  href="/animal/new">Add Animal</a></li>
+    <body>
+        <ul class="nav nav-tabs">
+            <li role="presentation"><a href="/">Animals</a></li>
+            <li role="presentation"><a href="/allAnimals">All Animal</a></li>
         </ul>
         <div class="container">
         <!--begin main template-->
@@ -18,7 +18,6 @@
             <div class="col-md-12">
                 {{#block "content"}}
                 {{/block}}
-
             </div>
         </div>
         <!--end main template-->
