--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -6,8 +6,8 @@
     </head>
     <body>
         <ul class="nav nav-tabs">
-            <li role="presentation"><a href="/">Animals</a></li>
-            <li role="presentation"><a href="/allAnimals">All Animal</a></li>
+            <li role="presentation"><a href="/">Add animal</a></li>
+            <li role="presentation"><a href="/allAnimals">All Animals</a></li>
         </ul>
         <div class="container">
         <!--begin main template-->
