--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -1,6 +1,7 @@
 {{#partial "content"}}
-<button type="button"><a href="/animal/new">add an Animal</a></button>
-<button type="button"><a href="/EndangeredAnimal/new">add an Endangered Animal</a></button>
+    <button type="button"><a href="/animal/new">add an Animal</a></button>
+    <button type="button"><a href="/EndangeredAnimal/new">add an Endangered Animal</a></button>
+    <button type="button"><a href="/sight/new">Make a sighting</a></button>
 {{/partial}}
 
 {{> layout.hbs}}
