--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -6,8 +6,9 @@
     </head>
     <body>
         <ul class="nav nav-tabs">
-            <li role="presentation"><a href="/">Add animal</a></li>
-            <li role="presentation"><a href="/allAnimals">All Animals</a></li>
+            <li role="presentation"><a href="/">HOME</a></li>
+            <li role="presentation"><a href="/allAnimals">All ANIMALS</a></li>
+            <li role="presentation"><a href="/allSightings">All SIGHTINGS</a></li>
         </ul>
         <div class="container">
         <!--begin main template-->
