--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -13,7 +13,7 @@
         <div class="container">
         <!--begin main template-->
             <div class="page-header">
-
+                <h1 style="text-align:center;">FOREST-SERVICE</h1>
             </div>
 
             <div class="col-md-12">
