adding calculations with constants for healthlevel

--- a/src/main/resources/templates/allSightings.hbs
+++ b/src/main/resources/templates/allSightings.hbs
@@ -3,7 +3,7 @@
             <h3 style="text-align:center; text-decoration:underline;margin-bottom:20px;">ALL SIGHTINGS</h3>
             {{#each sightings }}
                 <ol>
-                    <li><strong>Sighting made for animal with id:<em> {{ animalName }}</em>,at <em style="text-decoration:underline;">{{ location }}</em>,by ranger <em style="text-decoration:underline;">{{ rangerName }}</em>.</strong></li>
+                    <li><strong>Sighting made for animal named:<em style="text-decoration:underline;"> {{ animalName }}</em>,at <em style="text-decoration:underline;">{{ location }}</em>,by ranger <em style="text-decoration:underline;">{{ rangerName }}</em>.</strong></li>
                 </ol>
              {{/each}}
         {{else}}
