--- a/src/main/resources/templates/allAnimals.hbs
+++ b/src/main/resources/templates/allAnimals.hbs
@@ -18,7 +18,7 @@
                     {{#each endangeredAnimal }}
                         <p>----{{ id }}----</p>
                         <p>{{ name }} </p>
-                        <p>{{ health }} </p>
+                        <p>{{ healthLevel }} </p>
                         <p>{{ age }} </p>
                     {{/each}}
                 {{else}}
