adding calculations with constants for age

--- a/src/main/resources/templates/allAnimals.hbs
+++ b/src/main/resources/templates/allAnimals.hbs
@@ -19,7 +19,7 @@
                         <p>----{{ id }}----</p>
                         <p>{{ name }} </p>
                         <p>{{ healthLevel }} </p>
-                        <p>{{ age }} </p>
+                        <p>{{ ageCalc }} </p>
                     {{/each}}
                 {{else}}
                     <h1>No Endangered Animals registered yet</h1>
