--- a/src/main/resources/templates/EnAnimal-form.hbs
+++ b/src/main/resources/templates/EnAnimal-form.hbs
@@ -1,11 +1,11 @@
 {{#partial "content"}}
     <h1>Add a new Animal!</h1>
              <form action="/EndangeredAnimal/new" method="post">
-                <label for="name">Name:</label><br>
+                <label for="name">Name of animal:</label><br>
                 <input id="name" name="name" type="text"><br>
-                <label for="age">Age:</label><br>
+                <label for="age">How old is the animal:</label><br>
                 <input id="age" name="age" type="text"><br>
-                <label for="health">Health:</label><br>
+                <label for="health">On a level of 1 to 10 how healthy is the animal:</label><br>
                 <input id="health" name="health" type="text"><br>
                 <button type="submit" class="btn btn-default">Go!</button>
              </form>
