--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -3,5 +3,7 @@
     <button type="button"><a href="/EndangeredAnimal/new">add an Endangered Animal</a></button>
     <button type="button"><a href="/sight/new">Make a sighting</a></button>
 {{/partial}}
+<style>
 
+</style>
 {{> layout.hbs}}
