--- a/src/main/resources/templates/EnAnimal-form.hbs
+++ b/src/main/resources/templates/EnAnimal-form.hbs
@@ -1,13 +1,21 @@
 {{#partial "content"}}
-    <h1>Add a new Animal!</h1>
-             <form action="/EndangeredAnimal/new" method="post">
+    <h3>Add a new Animal!</h3>
+        <form action="/EndangeredAnimal/new" method="post">
+            <div class="form-group">
                 <label for="name">Name of animal:</label><br>
-                <input id="name" name="name" type="text"><br>
+                <input class="form-control" id="name" name="name" type="text"><br>
+            </div>
+            <div class="form-group">
                 <label for="age">How old is the animal:</label><br>
-                <input id="age" name="age" type="text"><br>
+                <input class="form-control" id="age" name="age" type="text"><br>
+            </div>
+            <div class="form-group">
                 <label for="health">On a level of 1 to 10 how healthy is the animal:</label><br>
-                <input id="health" name="health" type="text"><br>
-                <button type="submit" class="btn btn-default">Go!</button>
-             </form>
+                <input class="form-control" id="health" name="health" type="text"><br><br>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-default">ADD</button>
+            </div>
+        </form>
 {{/partial}}
 {{> layout.hbs}}
