--- a/src/main/resources/templates/sighting-form.hbs
+++ b/src/main/resources/templates/sighting-form.hbs
@@ -1,20 +1,28 @@
 {{#partial "content"}}
     <h1>Add a Sighting!</h1>
-             <form action="/sight/new" method="post">
-                <label for="location">Location:</label><br>
-                <input id="location" name="location" type="text"><br>
-                <label for="rangerName">Ranger's Name:</label><br>
-                <input id="rangerName" name="rangerName" type="text"><br>
-                <label for="animalName">Select animal name:</label><br>
-                <select name="animalName">
-                       {{#each endangeredAnimal}}
-                            <option>{{name}}</option>
-                       {{/each}}
-                        {{#each animal}}
-                            <option>{{name}}</option>
-                        {{/each}}
-                </select>
-                <button type="submit" class="btn btn-default">Go!</button>
-             </form>
+    <form action="/sight/new" method="post">
+        <div class="form-group">
+            <label for="location">Location:</label><br>
+            <input class="form-control" id="location" name="location" type="text"><br>
+        </div>
+        <div class="form-group">
+             <label for="rangerName">Ranger's Name:</label><br>
+             <input class="form-control" id="rangerName" name="rangerName" type="text"><br>
+        </div>
+        <div class="form-group">
+             <label for="animalName">Select animal name:</label><br>
+             <select class="form-control" name="animalName">
+                {{#each endangeredAnimal}}
+                    <option>{{name}}</option>
+                {{/each}}
+                {{#each animal}}
+                    <option>{{name}}</option>
+                {{/each}}
+             </select>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-default">ADD</button>
+        </div>
+    </form>
 {{/partial}}
 {{> layout.hbs}}
