--- a/src/main/resources/templates/newAnimal-form.hbs
+++ b/src/main/resources/templates/newAnimal-form.hbs
@@ -3,11 +3,18 @@
         <form action="/animal/new" method="post">
             <div class="form-group">
                 <label for="name">Animal name:</label><br>
-                <input class="form-control" id="name" name="name" type="text"><br>
+                <input id="name" name="name" type="text"><br>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-default">ADD</button>
             </div>
         </form>
 {{/partial}}
+<style>
+    body{
+        background-image: url("http://getwallpapers.com/wallpaper/full/3/1/8/645044.jpg");
+        background-repeat: no-repeat;
+        background-size:cover;
+    }
+</style>
 {{> layout.hbs}}
