adding styling to the all sightings page

--- a/src/main/resources/templates/allSightings.hbs
+++ b/src/main/resources/templates/allSightings.hbs
@@ -42,5 +42,10 @@
       background-color: black;
       color: white;
     }
+    body{
+        background-image: url("https://wallpaperaccess.com/full/732257.jpg");
+        background-repeat: no-repeat;
+        background-size:cover;
+    }
 </style>
 {{> layout.hbs}}
