--- a/src/main/resources/templates/successE.hbs
+++ b/src/main/resources/templates/successE.hbs
@@ -1,5 +1,11 @@
 {{#partial "content"}}
-<p>success!!!!!!!!</p>
+<img style="text-align:center;" src="https://thumbs.gfycat.com/BlissfulScornfulHumpbackwhale-max-1mb.gif">
 {{/partial}}
-
+<style>
+    body{
+        background-image: url("https://i2.wp.com/codemyui.com/wp-content/uploads/2015/10/progress-and-tick-icon-animation.gif?fit=880%2C440&ssl=1");
+        background-repeat: no-repeat;
+        background-size:cover;
+    }
+</style>
 {{> layout.hbs}}
