adding styling to all sightings page

--- a/src/main/resources/templates/allSightings.hbs
+++ b/src/main/resources/templates/allSightings.hbs
@@ -23,6 +23,7 @@
 <style>
     table#t01 {
       width:100%;
+      margin-bottom:3%;
     }
     table#t01 , th#header, td#data {
       border: 1px solid black;
